fix header and body are misaligned in 18.1

--- a/src/css/structure/modules/infragistics.ui.grid.css
+++ b/src/css/structure/modules/infragistics.ui.grid.css
@@ -7,7 +7,7 @@
 
 .ui-iggrid .ui-helper-reset {
     line-height : 1.4;
-    border      : 0 none;
+    border      : 0;
 }
 
 .ui-iggrid-table {
@@ -49,7 +49,7 @@
 }
 
 /* BUG 246065 Marin Popov 23.12.2017 Grid's header and body are misaligned when a grid is Multi Row Layout and is continuous virtualization mode.*/
-.ui-iggrid-headertable-mrl-scrollable {
+.ui-iggrid-headertable-mrl.ui-iggrid-headertable-mrl-scrollable {
     border-spacing: 0;
     border-collapse: separate;
     border-right: 1px solid #dadada;
