--- a/src/css/themes/bootstrap4/default/infragistics.theme.css
+++ b/src/css/themes/bootstrap4/default/infragistics.theme.css
@@ -2827,12 +2827,8 @@ body .ui-tooltip {
 .ui-iggrid-layout-helper {
   border-bottom: 1px solid #eceeef; }
 
-.ui-iggrid-layout-helper > tbody > tr:first-child > td,
-.ui-iggrid-layout-helper > tbody > tr:first-child > td th,
-.ui-iggrid > table > thead + tbody > tr:first-child td,
-.ui-iggrid > table > thead + tfoot + tbody > tr:first-child td {
- /* border-top: 0 none!important;
-border-top removed for tables with virtualization, or headers */ }
+.ui-iggrid-layout-helper > tbody > tr:first-child > td th {
+  border-top: 0 !important; }
 
 .ui-iggrid .ui-widget-header,
 .ui-iggrid th,
@@ -2840,8 +2836,7 @@ border-top removed for tables with virtualization, or headers */ }
   background-color: #fff;
   color: #373a3c;
   border-color: #eceeef;
-  border-right: 1px solid #eceeef;
-  border-left: 0 none; }
+  border-right: 1px solid #eceeef; }
 
 .ui-iggrid th .ui-iggrid-indicatorcontainer .ui-iggrid-summaries-header-icon.ui-icon {
   background: url(images/igGrid/filter-icons-333333.png) no-repeat scroll -416px 0 transparent; }
